# anicet

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: BUILD.md  arm64.inspect.py.md  codec.md  simd.md
include/: android_binder_init.h  android_mediacodec_lib.h  android_process_state.h  anicet_common.h  anicet_parameter.h  anicet_runner.h  anicet_runner_jpegli.h  anicet_runner_libjpegturbo.h  anicet_runner_mediacodec.h  anicet_runner_svtav1.h  anicet_runner_webp.h  anicet_runner_x265.h  anicet_version.h  anicet_version.h.in  resource_profiler.h
patches/: apply-jxs-patch.sh  apply-x265-asm-patch.sh  apply-x265-patch.sh  jxs-portable-strcat.patch  prefix-lib-symbols.sh  x265-android-asm-target.patch  x265-pthread-fix.patch
src/: CMakeLists.txt  android-binder_init.h  android-mediacodec.cpp  android-process_state.h  android_binder_helper.cpp  android_mediacodec.cc  android_mediacodec_lib.cc  anicet.cpp  anicet_common.cc  anicet_parameter.cc  anicet_runner.cc  anicet_runner_jpegli.cc  anicet_runner_libjpegturbo.cc  anicet_runner_mediacodec.cc  anicet_runner_svtav1.cc  anicet_runner_webp.cc  anicet_runner_x265.cc
tools/: arm64.inspect.py  auxv.print.py
